Experiment 3 variable delay runner + delay sampling + plotting

--- a/gym-duckiematrix/.gitignore
+++ b/gym-duckiematrix/.gitignore
@@ -74,6 +74,12 @@ html/*
 pdf/*
 !pdf/PDF_WILL_BE_GENERATED_HERE
 
+# Experiment / training artifacts (generated)
+delay_experiments/
+checkpoints/
+src/delay_experiments/
+src/checkpoints/
+
 # PyBuilder
 target/
 
